Solve problems of mobile experience again, since the spacing was not good enough

--- a/index_styles.css
+++ b/index_styles.css
@@ -30,11 +30,11 @@ body{background-color: #DCE1DE;
   
 }
 .btn-get_wiser:hover {
-  color: black;
+  color: black;git a
   background-color: grey;}
   
-.img-fluid{width:30%;
-  height: 30%;
+.img-fluid{width:50%;
+  height: 50%;
 
 }
 
