--- a/subjects/subjects_styles.css
+++ b/subjects/subjects_styles.css
@@ -24,7 +24,7 @@ body {
   border:2px solid black;
   font-size: 3vh;
   padding:1% 1%;
-  margin: 10% 10%;
+  margin: 3% 3%;
 
 }
 
@@ -36,7 +36,7 @@ body {
   border:2px solid black;
   font-size: 3vh;
   padding:1% 1%;
-   margin: 10% 10%;
+    margin: 3% 3%;
 }
 
 .subject__marketing:hover {
@@ -47,7 +47,7 @@ body {
   border:2px solid black;
   font-size: 3vh;
   padding:1% 1%;
-   margin: 10% 10%;
+    margin: 3% 3%;
 }
 .subject__work:hover {
   background-color: grey;
@@ -56,7 +56,7 @@ body {
   border:2px solid black;
   font-size: 3vh;
   padding:1% 1%;
-   margin: 10% 10%;
+    margin: 3% 3%;
 }
 
 .subject__ideas:hover {
@@ -66,7 +66,7 @@ body {
   border:2px solid black;
 font-size: 3vh;
 padding:1% 1%;
- margin: 10% 10%;}
+  margin: 3% 3%;}
 
 .subject__life:hover {
   background-color: grey;
